Display current player information and add termination condition

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
-<!-- TODO: create HTML and add JS that performs a GET request on the http://127.0.0.1:5000/start -->
 <html>
-<head>
-    <title>Scrabblerousers!</title>
-</head>
+    <head>
+        <title>Scrabblerousers!</title>
+    </head>
 <body>
-<p>
-    Hello world!
-</p>
+    <p>
+        Player: {{ player }}
+        <br />
+        Points earned: {{ score }}
+        <br />
+        Tiles: {{ tiles }}
+    </p>
 
 <table>
     <tbody>
