Add ability to start new game after one game has ended

--- a/templates/end.html
+++ b/templates/end.html
@@ -5,6 +5,10 @@
     <body>
         <p>
             End of game!
+            <form method = "post" action = "/">
+                <input type = "submit" value = "New game" />
+            </form>
         </p>
+
     </body>
 </html>
